# multimodal-video-compliance-auditor

./: .gitignore  README.md
ComplianceQAPipeline/: main.py  pyproject.toml
ComplianceQAPipeline/backend/scripts/: index_documents.py
ComplianceQAPipeline/backend/src/api/: server.py  telemetry.py
ComplianceQAPipeline/backend/src/graph/: nodes.py  state.py  workflow.py
ComplianceQAPipeline/backend/src/services/: video_indexer.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/results/: page.tsx
