[project]
name = "complianceqapipeline"
version = "0.1.0"
description = "AI-powered YouTube ad compliance auditor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.8",
    "azure-search-documents>=12.0.0",
    "fastapi>=0.115.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "uvicorn>=0.30.0",
    "yt-dlp>=2024.1.1",
]